Fixed noty z-index and color

--- a/src/widgets/noty/autoexpand/autoexpand.scss
+++ b/src/widgets/noty/autoexpand/autoexpand.scss
@@ -67,7 +67,6 @@
 
   .noty-queue {
     @include noty-queue-expand ();
-    box-shadow: none !important;
   }
 
 }
