--- a/src/widgets/noty/queue/mixins.scss
+++ b/src/widgets/noty/queue/mixins.scss
@@ -16,16 +16,21 @@
   margin: 0 !important;
 
   &:not(:empty) {
-    @include z-depth ( $noty-z-depth );
+    @include z-depth-inline ( $noty-z-depth );
   }
 
   .noty {
-    @include z-depth ( 0 );
+
     width: 100%;
     margin: 0 !important;
     border-right-width: 0;
     border-left-width: 0;
     border-radius: 0;
+
+    .infobar {
+      @include z-depth-inline ( 0 );
+    }
+
   }
 
 }
