--- a/src/widgets/noty/queues/queues.scss
+++ b/src/widgets/noty/queues/queues.scss
@@ -14,6 +14,7 @@
 .noty-queues {
 
   position: fixed;
+  z-index: $noty-queues-z-index;
   display: flex;
   left: 0;
   right: 0;
