--- a/src/widgets/noty/variables.scss
+++ b/src/widgets/noty/variables.scss
@@ -11,7 +11,6 @@
 
 /* NOTY */
 
-$noty-z-index: 600 !default;
 $noty-z-depth: 7 !default;
 
 $noty-bg-transparentize-amount: .05 !default; //TODO: Implement it
